@@ -23,6 +23,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #5931: wsgiref environ variable SERVER_SOFTWARE will specify an
+  implementation specific term like Cpython, Jython instead of generic "Python"
+
 - Issue #13248: Remove obsolete argument "max_buffer_size" of BufferedWriter
   and BufferedRWPair, from the io module.
 
